# rust-wasm-serverless

./: Cargo.toml  spin.toml
other_file/: Cargo.toml
other_file/src/: lib.rs
servernone_route/: Cargo.toml
servernone_route/src/: lib.rs
